2003-08-10  Nathaniel Smith  <njs@codesourcery.com>

	* qm/version.py.in: New file.
	* qm/setup_path.py.in: Remove version handling, and rename to...
	* qm/setup_path.py: ...this.
	* qm/.cvsignore: Add version.py, remove setup_path.py.
	* configure.in (AC_OUTPUT): Munge qm/version.py.in instead of
	qm/setup_path.py.in.
	* configure: Regenerate.
	* GNUmakefile.in (all): Remove qm/setup_path.py.
	(distclean): Delete qm/version.py, don't delete
	qm/setup_path.py.
	* qm/__init__.py: Import version, version_info from qm.version.
	* qm/test/qmtest.py (main): Don't pass version to QMTest
	initializer.
	* qm/test/cmdline.py (QMTest.__init__): Don't accept or record
	version information.
	(QMTest.GetVersion): Remove.
	(QMTest.Execute): Don't call QMTest._GetVersionString.
	(QMTest._GetVersionString): Remove.
	
2003-08-08  Nathaniel Smith  <njs@codesourcery.com>

	* qm/test/context.py (ContextException.__safe_for_unpickling__):
	Set to 1.
	(ContextWrapper): New class.
	* qm/test/result.py (Result.__setstate__): New method.
	(Result.__getstate__): New method.

	* tests/results_files: New directory.
	* tests/results_files/QMTest: Likewise.
	* tests/results_files/QMTest/configuration: New file.
	* tests/results_files/QMTest/classes.qmc: New file.
	* tests/results_files/QMTest/results_file_database.py: New
	file.
	* tests/results_files/QMTest/results_file_test.py: New file.
	* tests/results_files/README: New file.
	* tests/results_files/xml_results.qmr: New file.
	* tests/results_files/result_class_v0-file_format_v0-pickling_format_v0.qmr:
	New file.
	* tests/results_files/result_class_v1-file_format_v0-pickling_format_v0.qmr:
	New file.
	* tests/results_files/result_class_v1-file_format_v1-pickling_format_v0.qmr:
	New file.
	* tests/results_files/result_class_v1-file_format_v1-pickling_format_v1.qmr:
	New file.
	* tests/results_files/tdb: New directory.
	* tests/results_files/tdb/QMTest: New directory.
	* tests/results_files/tdb/QMTest/configuration: New file.