@@ -207,7 +207,7 @@ endif
 
 distclean: clean
 	rm -f GNUmakefile config.cache config.status config.log
-	rm -f qm/version.py 
+	rm -f qm/__version.py 
 	rm -f qm.spec
 
 # Run tests.
